# ToDo

./: .gitignore  Makefile  api.py  example.env  pyproject.toml  requirements.txt  todo.py
src/: alembic.ini  main.py
src/api/: routes.py
src/api/endpoints/: auth.py  projects.py  roles.py  users.py
src/core/: config.py  db.py
src/middleware/: auth_middleware.py
src/migrations/: README  env.py
src/migrations/versions/: 0065b75ea6a0_added_field_status_in_model_.py  0f8414da99b7_changed_first_name_last_name_and_.py  10958f58ad77_changed_field_projectinvitation_user_to_.py  25face1f9cb9_added_models_task_priority_taskstatus.py  46c4f4880493_added_roles.py  4e976a8ca55a_added_model_projectinvitation.py  5e433a3415c1_changes_user_fields_performer_on_tasks.py  8b0de204af51_fixed_fields_in_user_and_project.py  90a870852245_added_in_project_two_fields_owner_and_.py  92f8f08365c5_added_otp.py  9977ce200c4e_initial.py  9bb44d293d4a_fixed_fields_in_user_and_project.py  ccf3b3db52d7_added_models_project.py
src/models/: __init__.py  association_tables.py  base_models.py  otp.py  projects.py  tasks.py  users.py
src/repositories/: base_repository.py  otp.py  projects.py  roles.py  tasks.py  users.py
src/schemas/: auth.py  projects.py  roles.py  tasks.py  users.py
src/services/: auth.py  base_service.py  users.py
